v0.12.0
* Subscription to update the substitution list periodically from an URL.
* Ability to use backslash-escaped characters in input (text and whole words) and output. Supported
  characters are \\ (backslash), \n (new line), \r (carriage return) and \t (tab).
* Removed compatibility with Firefox 1.5 and 2.
* Compatibility with Firefox 3.5.
* String changes:
  - foxreplace.properties: new: invalidSubscriptionUrl.
  - options.dtd: new: subscriptionCheckBox.label, subscriptionCheckBox.accesskey,
    subscriptionUrl.label, subscriptionUrl.accesskey, subscriptionPeriod.label,
    subscriptionPeriod.accesskey.

v0.11.0 (25-4-2009)
* Import from URL.
* Whole words substitutions now support the extended Latin alphabet, IPA extensions, and the Greek,
  Coptic and Cyrillic alphabets.
* "Clear" buttons in all dialogs disabled if their respective lists are empty.
* Forced text color of input textbox so it's visible with dark themes.
* Removed compatibility with the substitution list in the old 0.7 format.
* Compatibility with Firefox 3.1b3.
* Removed unneeded box "xmlHolder" in options.xul.
* String changes:
  - options.dtd: new: importFromUrlButton.label, importFromUrlButton.accesskey.
  - foxreplace.properties: new: importFromUrlTitle, importFromUrlText, nonSupportedProtocol,
    onlyHttp, httpError, cantConnectToServerTitle, cantConnectToServerText, unexpectedError.
  - Misc. changes in the Catalan locale.
* New locale:
  - tr-TR (by eren).

v0.10.0 (25-1-2009)
* Exclusion URLs.
* String changes:
  - help.dtd: new: substitutionGroup.p0, substitutionGroup.p1; removed:
    substitutionGroup.p.
  - substitutiongroupeditor.dtd: changed: description.

v0.9.1 (26-12-2008)
* Compatibility with Firefox 3.1b2.
* New locales:
  - ko-KR (by 용오름(Wtspout)).
  - ro-RO (by alexxed).
  - sr-RS (by Касперски ~ РС).

v0.9.0 (22-11-2008)
* HTML substitutions.
* Editable URLs and substitutions.
* Edit, delete and move buttons in options dialog disabled when there is no item
  selected.