@@ -1,5 +1,5 @@
 pref("extensions.fox@replace.fx.description", "chrome://foxreplace/locale/foxreplace.properties");
-pref("extensions.foxreplace.substitutionListXml", '<substitutionlist version="0.10"/>');
+pref("extensions.foxreplace.substitutionListXml", '<substitutionlist version="0.12"/>');
 pref("extensions.foxreplace.autoReplaceOnLoad", false);
 pref("extensions.foxreplace.replaceUrls", false);
 pref("extensions.foxreplace.enableSubscription", false);
